estilando título de la landing

--- a/index.html
+++ b/index.html
@@ -22,8 +22,7 @@
         </header>
         <div class="contenido">
             <div class="contenedor_titulo">
-                <h2>Cada taza<br/></h2>
-                <h2>de <span>coffee</span></h2>
+                <h2>Cada taza<br/>de <span>coffee</span></h2>
                 <p>es una experiencia única</p>
                 <a href="#">Comprar</a>
             </div>
