adicion footer y circulo decorativo mas estilos

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 </head>
 <body>
     <section>
+        <div class="circulo"></div>
         <header>
             <a href="#" class="logo">Coffee</a>
             <nav>
@@ -30,6 +31,11 @@
                 <img src="/img/coffe_bag.png" alt="Bolsa de Café">
             </div>
         </div>
+        <footer>
+            <a href="#"><ion-icon name="logo-facebook"></ion-icon></a>
+            <a href="#"><ion-icon name="logo-linkedin"></ion-icon></a>
+            <a href="#"><ion-icon name="logo-instagram"></ion-icon></a>
+        </footer>
     </section>
 
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
