layout responsive para tablets y armado del toggle menu

--- a/index.html
+++ b/index.html
@@ -14,11 +14,12 @@
         <div class="circulo"></div>
         <header>
             <a href="#" class="logo">Coffee</a>
-            <nav>
-                <a href="#">Acerca De</a>
-                <a href="#">Nuestros productos</a>
-                <a href="#">Ubicación</a>
-                <a href="#">Contacto</a>
+            <nav class="menu_toggle" onclick="toggle_menu()"></nav>
+            <nav class="nav_bar active">
+                <a href="#" onclick="toggle_menu()">Acerca De</a>
+                <a href="#" onclick="toggle_menu()">Nuestros productos</a>
+                <a href="#" onclick="toggle_menu()">Ubicación</a>
+                <a href="#" onclick="toggle_menu()">Contacto</a>
             </nav>
         </header>
         <div class="contenido">
