funcionalidad del toggle menu

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <header>
             <a href="#" class="logo">Coffee</a>
             <nav class="menu_toggle" onclick="toggle_menu()"></nav>
-            <nav class="nav_bar active">
+            <nav class="nav_bar">
                 <a href="#" onclick="toggle_menu()">Acerca De</a>
                 <a href="#" onclick="toggle_menu()">Nuestros productos</a>
                 <a href="#" onclick="toggle_menu()">Ubicación</a>
