--- a/index.html
+++ b/index.html
@@ -1,46 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Coffe Landing Page</title>
-    <link rel="stylesheet" href="/css/style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Lora:ital@0;1&family=Open+Sans:wght@800&display=swap" rel="stylesheet">
-</head>
-<body>
+    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lora:ital@0;1&family=Open+Sans:wght@800&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
     <section>
-        <div class="circulo"></div>
-        <header>
-            <a href="#" class="logo">Coffee</a>
-            <nav class="menu_toggle" onclick="toggle_menu()"></nav>
-            <nav class="nav_bar">
-                <a href="#" onclick="toggle_menu()">Acerca De</a>
-                <a href="#" onclick="toggle_menu()">Nuestros productos</a>
-                <a href="#" onclick="toggle_menu()">Ubicación</a>
-                <a href="#" onclick="toggle_menu()">Contacto</a>
-            </nav>
-        </header>
-        <div class="contenido">
-            <div class="contenedor_titulo">
-                <h2>Cada taza<br/>de <span>coffee</span></h2>
-                <p>es una experiencia única</p>
-                <a href="#">Comprar</a>
-            </div>
-            <div class="contenedor_imagen">
-                <img src="/img/coffe_bag.png" alt="Bolsa de Café">
-            </div>
+      <div class="circulo"></div>
+      <header>
+        <a href="#" class="logo">Coffee</a>
+        <nav class="menu_toggle" onclick="toggle_menu()"></nav>
+        <nav class="nav_bar">
+          <a href="#" onclick="toggle_menu()">Acerca De</a>
+          <a href="#" onclick="toggle_menu()">Nuestros productos</a>
+          <a href="#" onclick="toggle_menu()">Ubicación</a>
+          <a href="#" onclick="toggle_menu()">Contacto</a>
+        </nav>
+      </header>
+      <div class="contenido">
+        <div class="contenedor_titulo">
+          <h2>Cada taza<br />de <span>coffee</span></h2>
+          <p>es una experiencia única</p>
+          <a href="#">Comprar</a>
         </div>
-        <footer>
-            <a href="#"><ion-icon name="logo-facebook"></ion-icon></a>
-            <a href="#"><ion-icon name="logo-linkedin"></ion-icon></a>
-            <a href="#"><ion-icon name="logo-instagram"></ion-icon></a>
-        </footer>
+        <div class="contenedor_imagen">
+          <img src="/img/coffe_bag.png" alt="Bolsa de Café" />
+        </div>
+      </div>
+      <footer>
+        <a href="#"><ion-icon name="logo-facebook"></ion-icon></a>
+        <a href="#"><ion-icon name="logo-linkedin"></ion-icon></a>
+        <a href="#"><ion-icon name="logo-instagram"></ion-icon></a>
+      </footer>
     </section>
 
-    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
-    <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+    <script
+      type="module"
+      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
+    ></script>
+    <script
+      nomodule
+      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
+    ></script>
     <script src="/js/index.js"></script>
-</body>
+  </body>
 </html>
